applications/base/chronyd/network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ntp
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - toFQDNs:
        - matchPattern: "*.pool.ntp.org"
      toPorts:
        - ports:
            - port: "123"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*.pool.ntp.org"
